Calculate new Object, Object[], Custom heap size